--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,51 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <style>
+      .container {
+        height: 50vh;
+        width: 50vw;
+        background-color: white;
+        box-shadow: 5px 5px black;
+        margin-top: 20vh;
+        border: 1px solid black;
+      }
+      .task {
+        background-color: gray;
+        height: 50px;
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        font-weight: bold;
+        border: 2px solid black;
+      }
+
+      .each-task {
+        color: white !important;
+        text-decoration: none;
+        margin-left: 10px;
+      }
+      .form {
+        margin-top: 200px;
+        margin-bottom: 100px;
+        margin-right: 100px;
+        margin-left: 100px
+
+      }
+
+      .task-details {
+        margin-left: 400px;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 100px;
+
+      }
+      .new-task {
+        margin: 200px;
+      }
+
+    </style>
   </head>
 
   <body>
