--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,12 +3,14 @@
 
 
 <div class="container">
+  <h1>Manage your tasks</h1>
   <% @tasks.each do |task| %>
-    <div class="form-check">
+    <div class="form-check task">
       <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
       <label class="form-check-label" for="flexCheckDefault">
-        <%= link_to task.title, task_path(task) %>
+        <%= link_to task.title, task_path(task), class: "each-task" %>
       </label>
-</div>
+    </div>
   <% end %>
+  <%= link_to "Add a new task", new_task_path, class: "btn btn-primary" %>
 </div>
