--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,11 +1,21 @@
-<%= @task.details %>
-<%= @task.completed %>
+<div class="container">
+  <div class="task-details">
+
+    <h5>Details: <%= @task.details %></h5>
+      <% if @task.completed == true %>
+          <h6>Stauts: Completed</h6>
+        <% else %>
+          <h6>Status: Not completed</h6>
+        <% end %>
 
 
-<%= link_to "Back to all tasks", tasks_path %>
+      <%= link_to "Back to all tasks", tasks_path, class:"btn btn-primary mt-4" %>
+      <br>
+      <%= link_to "Edit", edit_task_path, class: "btn btn-primary mt-4" %>
+      <br>
+      <%= link_to "Delete", task_path(@task),
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this task?"}, class: "btn btn-primary mt-4"
+      %>
+  </div>
 
-<%= link_to "Edit", edit_task_path %>
-
-<%= link_to "Delete", task_path(@task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this task?"}
-%>
+</div>
